--- a/contact.html
+++ b/contact.html
@@ -27,19 +27,20 @@
     <div class="content">
       <div class="inner">
         <h1>Welcome to paiges Cupcake shop</h1>
-        <h2></h2>
-        <p>
-          welcome to paiges cupcakes we are here to help you create what you can
-          imagine
-        </p>
+        <h2>vist us at:</h2>
+        <p>VMLY&R</p>
+        <p>250 Richards Rd</p>
+        <p>Kansas city, mo 64116</p>
         <ul class="inline">
           <li><img src="img/cactuscupcake.jpg" /></li>
           <li><img src="img/cupcake.jpg" /><</li>
           <li><img src="img/unicorncupcake.jpg" /></li>
         </ul>
 
-        <h3>Let's Get Started!</h3>
-        <p></p>
+        <h3></h3>
+        <p>
+          thank you !
+        </p>
       </div>
     </div>
     <div class="footer">
